--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -243,6 +243,7 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  align-self: flex-start;
 }
 
 .circularProgress {
