--- a/src/styles/banner.module.css
+++ b/src/styles/banner.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   padding: 1rem 0;
   width: calc(100% - 2rem);
-  margin: auto
+  margin: auto;
 }
 @media (orientation: landscape) and (min-height: 540px) {
   .bannerCont {
@@ -90,6 +90,13 @@
   border-radius: 0.2em;
   padding: 0 0.5em;
   border: 1px var(--red) solid;
+}
+
+.but:disabled,
+.but[disabled] {
+  border: 1px solid #999999 !important;
+  background-color: #cccccc !important;
+  color: #666666 !important;
 }
 
 .svgBut {
